done with the frontend

--- a/public/index.html
+++ b/public/index.html
@@ -31,22 +31,23 @@
           <input type="email" class="mail-input" id="email-box" />
         </div>
         <div class="link-box">
-          <input
-            type="text"
-            class="link-copy"
-            disabled
-            aria-disabled="true"
-            id="link-copy-box"
-            link-copy
-          />
+          <div class="link-copy-area" id="link-copy-area"></div>
           <div class="link-copy-icon-cnt" id="link-copy-btn">
-            <img src="/assets/copy-icon.png" width="32" height="32" />
+            <img
+              src="/assets/copy-icon.png"
+              width="32"
+              height="32"
+              id="copy-icon"
+            />
           </div>
         </div>
       </div>
     </main>
     <footer>
-      Created by <a href="https://github.com/Xavier577">Joseph Tsegen</a>
+      <span
+        >Created by
+        <a href="https://github.com/Xavier577">Joseph Tsegen</a></span
+      >
     </footer>
   </body>
 </html>
