used span to keep link inline

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
           <input type="email" class="mail-input" id="email-box" />
         </div>
         <div class="link-box">
-          <div class="link-copy-area" id="link-copy-area"></div>
+          <div class="link-copy-area" id="link-copy-area">
+            <span id="link-text"></span>
+          </div>
           <div class="link-copy-icon-cnt" id="link-copy-btn">
             <img
               src="/assets/copy-icon.png"
